# lib/db/src/schema/index.ts
@@ -3,6 +3,7 @@ export * from "./plans";
 export * from "./proxies";
 export * from "./payments";
 export * from "./subscriptions";
+export * from "./system_settings";
 export * from "./user_proxies";
 export * from "./usage_logs";
 export * from "./cart_items";
